.provarCaches/00D5f000005vwGkEAI/objects/rstk__porcvgop__c.object
<CustomObject>
    <description>porcvgop__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__porcvgop_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;  rstk__porcvgop_code__c &amp; &apos;_&apos; &amp;  TEXT(rstk__porcvgop_oper__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_allowaccind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Allow Acc Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_allowintlocind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Allow Int Loc Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_allowrtvind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Allow Rtv Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_allowrwkind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Allow Rwk Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_allowscrapind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Allow Scrap Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_code__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_descr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Receiving Operation Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divporcvgops</relationshipLabel>
        <relationshipName>divporcvgops</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_oper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__porcvgop_procno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>this is the Operation Number associated with this PO Receipt</inlineHelpText>
        <label>Mfg Process No</label>
        <referenceTo>rstk__rtproc__c</referenceTo>
        <relationshipLabel>PO Receipt Operations</relationshipLabel>
        <relationshipName>PO_Receipt_Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Receipt Operations</label>
    <listViews>
        <fullName>rstk__SAMPLE</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>SAMPLE</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Receipt Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>